adicionando a page do pomodoro ao nosso projeto

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&family=Poppins:ital,wght@0,300;0,400;0,700;1,200&display=swap" rel="stylesheet">
 
-    <link rel="stylesheet" href="styles/reset.css">
-    <link rel="stylesheet" href="styles/styles.css">
+    <link rel="stylesheet" href="styles/pagina-inicial/reset.css">
+    <link rel="stylesheet" href="styles/pagina-inicial/styles.css">
     <title>StudyStacker</title>
 </head>
 <body>
@@ -17,18 +17,22 @@
         <nav class="cabecalho__container-nav">
             
             <div class="cabecalho__container-logo">
-                <a href="#" class="cabecalho__logo">Study<span class="cabecalho__logo-final">Stacker</span></a>
+                <a href="index.html" class="cabecalho__logo">Study <button class="cabecalho__logo-final">Stacker</button></a>
             </div>
 
             <div class="cabecalho__container-opcoes">
-                <a href="#" class="cabecalho_opcoes-link">Home</a>
-                <a href="#" class="cabecalho_opcoes-link">Pomodoro</a>
+                <a href="index.html" class="cabecalho_opcoes-link">Home</a>
+                <a href="pomodoro/pomodoro.html" class="cabecalho_opcoes-link">Pomodoro</a>
                 <a href="#" class="cabecalho_opcoes-link">Jogos</a>
-                <a href="#" class="cabecalho_opcoes-link">Repositorio</a>
-                <a href="#" class="cabecalho_opcoes-link">Contato</a>
+                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>
+                <a href="#" class="cabecalho_opcoes-link">Contatos</a>
                 <a href="#" class="cabecalho_opcoes-link">Sobre</a>          
             </div>
         </nav>
     </header>
+
+    <main class="main__container">
+        
+    </main>
 </body>
 </html>
