--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -13,30 +13,12 @@
     <title>Pomodoro</title>
 </head>
 <body>
-    <main class="app">
-        <header class="app__header">
-            <figure class="app__logo-figure">
-                <h2 class="app__logo-titulo">Fokus Studystacker</h2>
-            </figure>
-        </header>
-        <section class="app__section-container">
-            <div class="app_container-card">
+    <header class="cabecalho">
+        <h2 class="cabecalho-titulo">Fokus Study<span>Stacker</span></h2>
+    </header>
 
-                <ul class="app__card-lista">
-                    <li class="app__card-lista-item">
-                        <button data-contexto="foco" class="app__card-button active">Foco</button>
-                    </li>
-                    <li class="app__card-lista-item">
-                        <button data-contexto="short" class="app__card-button">Descanso curto</button>
-                    </li>
-                    <li class="app__card-lista-item">
-                        <button data-contexto="long" class="app__card-button">Descanso longo</button>
-                    </li>
-                </ul>
-            </div>
-        </section>
-    </main>
-
-    <script src="pomodoro.js" defer></script>
+    <video autoplay muted loop id="video-bg">
+        <source src="imagens/lofi-girl-doing-homework-moewalls-com_iFkCLQle.mp4" type="video/mp4">
+    </video>
 </body>
 </html>
