Jogo Numero Secreto adicionado ao projeto

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <div class="cabecalho__container-opcoes">
                 <a href="index.html" class="cabecalho_opcoes-link">Home</a>
                 <a href="pomodoro/pomodoro.html" class="cabecalho_opcoes-link">Pomodoro</a>
-                <a href="#" class="cabecalho_opcoes-link">Jogos</a>
+                <a href="jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
                 <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>
                 <a href="#" class="cabecalho_opcoes-link">Contatos</a>
                 <a href="#" class="cabecalho_opcoes-link">Sobre</a>          
@@ -39,9 +39,8 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
+              <div class="swiper-slide"><img src="assets/numero-secreto.png" alt=""></div>
               <div class="swiper-slide"><img src="assets/pomodoro.png" alt=""></div>
-              <div class="swiper-slide">Slide 2</div>
-              <div class="swiper-slide">Slide 3</div>
               ...
             </div>
             <!-- If we need pagination -->
@@ -50,10 +49,6 @@
             <!-- If we need navigation buttons -->
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
-          
-            <!-- If we need scrollbar -->
-            <div class="swiper-scrollbar"></div>
-          </div>
     </main>
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
