alterando a ordem dos slides no index.html

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="cabecalho__container-nav">
             
             <div class="cabecalho__container-logo">
-                <a href="index.html" class="cabecalho__logo">Study <button class="cabecalho__logo-final">Stacker</button></a>
+                <a href="../index.html" class="cabecalho__logo">Fokus Study</a><button class="cabecalho__logo-final" id="btn-tema">Stacker</button>
             </div>
 
             <div class="cabecalho__container-opcoes">
@@ -39,8 +39,8 @@
             <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
               <!-- Slides -->
-              <div class="swiper-slide"><img src="assets/numero-secreto.png" alt=""></div>
               <div class="swiper-slide"><img src="assets/pomodoro.png" alt=""></div>
+              <div class="swiper-slide"><img src="assets/numero-secreto.png" alt=""></div>
               ...
             </div>
 
@@ -52,5 +52,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="js/swiper.js"></script>
+    <script src="js/index.js"></script>
 </body>
 </html>
