--- a/jogos/numeroSecreto.html
+++ b/jogos/numeroSecreto.html
@@ -12,6 +12,21 @@
     <title>Número Secreto</title>
 </head>
 <body>
+    <header class="cabecalho">
+        <nav class="cabecalho__container-nav">
+            
+            <div class="cabecalho__container-logo">
+                <a href="../index.html" class="cabecalho__logo">Fokus Study</a><button class="cabecalho__logo-final">Stacker</button>
+            </div>
+
+            <div class="cabecalho__container-opcoes">
+                <a href="../pomodoro/pomodoro.html" class="cabecalho_opcoes-link active-nav">Pomodoro</a>
+                <a href="../jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
+                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>       
+            </div>
+        </nav>
+    </header>
+
     <h1>Acerte o número secreto</h1>
 
     <h3>O número secreto está entre <span id="menor-valor">0</span> e <span id="maior-valor">100</span></h3>
