Removendo os links desnecessarios e refatorando o nosso projeto

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <nav class="cabecalho__container-nav">
             
             <div class="cabecalho__container-logo">
-                <a href="../index.html" class="cabecalho__logo">Fokus Study</a><button class="cabecalho__logo-final" id="btn-tema">Stacker</button>
+                <a href="../index.html" class="cabecalho__logo">Study</a><button class="cabecalho__logo-final" id="btn-tema">Stacker</button>
             </div>
 
             <div class="cabecalho__container-opcoes">
@@ -28,7 +28,7 @@
                 <a href="pomodoro/pomodoro.html" class="cabecalho_opcoes-link">Pomodoro</a>
                 <a href="jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
                 <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>
-                <a href="#" class="cabecalho_opcoes-link">Contatos</a>
+                <a href="#" class="cabecalho_opcoes-link">Cadastro</a>
                 <a href="#" class="cabecalho_opcoes-link">Sobre</a>          
             </div>
         </nav>
