--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -9,7 +9,7 @@
     <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="../styles/pagina-inicial/reset.css">
-    <link rel="stylesheet" href="../styles/pomodoro/pomodoro.css">
+    <link rel="stylesheet" href="pomodoro.css">
     <title>Pomodoro</title>
 </head>
 <body>
@@ -21,9 +21,8 @@
             </div>
 
             <div class="cabecalho__container-opcoes">
-                <a href="../pomodoro/pomodoro.html" class="cabecalho_opcoes-link active-nav">Pomodoro</a>
                 <a href="../jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
-                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>       
+                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>         
             </div>
         </nav>
     </header>
