--- a/jogos/numeroSecreto.html
+++ b/jogos/numeroSecreto.html
@@ -16,13 +16,13 @@
         <nav class="cabecalho__container-nav">
             
             <div class="cabecalho__container-logo">
-                <a href="../index.html" class="cabecalho__logo">Fokus Study</a><button class="cabecalho__logo-final">Stacker</button>
+                <a href="../index.html" class="cabecalho__logo">Game Study</a><button class="cabecalho__logo-final">Stacker</button>
             </div>
 
             <div class="cabecalho__container-opcoes">
                 <a href="../pomodoro/pomodoro.html" class="cabecalho_opcoes-link active-nav">Pomodoro</a>
-                <a href="../jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
-                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>       
+                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a> 
+                      
             </div>
         </nav>
     </header>
