Finalizado a section sobre no arquivo index.html

--- a/jogos/numeroSecreto.html
+++ b/jogos/numeroSecreto.html
@@ -21,7 +21,7 @@
 
             <div class="cabecalho__container-opcoes">
                 <a href="../pomodoro/pomodoro.html" class="cabecalho_opcoes-link active-nav">Pomodoro</a>
-                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a> 
+                <a href="https://github.com/Ki3lMigu3l" target="_blank" class="cabecalho_opcoes-link">Repositorio</a> 
                       
             </div>
         </nav>
