Iniciando o método para adicionar uma tarefa

--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -44,8 +44,10 @@
                 <button class="pomodoro-card-button-comecar active" id="btn-time">Começar</button>
             </div>
             <div class="pomodoro__container-card right">
-                <h2 class="pomodoro-left-card-titulo">Tarefas</h2>
+                <div class="tarefas-pomodoro">
+                    <h2 class="pomodoro-left-card-titulo">Adicione uma tarefa</h2>
 
+                </div>
             </div>
         </section>
     </main>
