style: update toda a página principal

--- a/index.html
+++ b/index.html
@@ -29,28 +29,22 @@
             </div>
 
             <div class="cabecalho__container-opcoes">
-                <a href="index.html" class="cabecalho_opcoes-link">Home</a>
                 <a href="pomodoro/pomodoro.html" class="cabecalho_opcoes-link">Pomodoro</a>
                 <a href="jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
-                <a href="https://github.com/Ki3lMigu3l" target="_blank" class="cabecalho_opcoes-link">Repositorio</a>
-                <a href="#" class="cabecalho_opcoes-link">Cadastro</a>
+                <a href="https://github.com/Ki3lMigu3l" target="_blank" class="cabecalho_opcoes-link">Github</a>
                 <a href="#sobre" class="cabecalho_opcoes-link">Sobre</a>
             </div>
         </nav>
     </header>
 
-    <main class="main__container">
+    <main>
         <div class="swiper">
-            <!-- Additional required wrapper -->
             <div class="swiper-wrapper">
-                <!-- Slides -->
                 <div class="swiper-slide"><img src="assets/pomodoro.png" alt=""></div>
                 <div class="swiper-slide"><img src="assets/numero-secreto.png" alt=""></div>
                 ...
             </div>
-
-
-            <!-- If we need navigation buttons -->
+            
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
     </main>
@@ -60,6 +54,10 @@
         <h2 class="sobre-titulo">Quem sou eu ?</h2>
 
         <div class="sobre__container-informacoes">
+            <div class="sobre__container-img">
+
+                <img src="assets/github-header.png" alt="">
+            </div>
             <div class="sobre__container-conteudo">
                 <div class="logo">
                     <div class="tools">
@@ -82,12 +80,6 @@
                     desenvolver soluções criativas. Atualmente, estou cursando Análise e Desenvolvimento de Sistemas,
                     com especialização em Java.</p>
             </div>
-
-            <div class="sobre__container-img">
-
-                <img src="assets/github-header.png" alt="">
-            </div>
-
         </div>
 
 
