--- a/pomodoro/pomodoro.html
+++ b/pomodoro/pomodoro.html
@@ -1,57 +1,43 @@
 <!DOCTYPE html>
-<html lang="pt-br" data-contexto="foco">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
+    <title>Pomodoro Moderno</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=M+PLUS+Rounded+1c:wght@400;700&display=swap" rel="stylesheet">
-
-    <link rel="stylesheet" href="../styles/pagina-inicial/reset.css">
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="pomodoro.css">
-    <title>Pomodoro</title>
 </head>
 <body>
-    <header class="cabecalho">
-        <nav class="cabecalho__container-nav">
-            
-            <div class="cabecalho__container-logo">
-                <a href="../index.html" class="cabecalho__logo">Fokus Study</a><button class="cabecalho__logo-final">Stacker</button>
-            </div>
+    <!-- GIF de fundo -->
+    <img src="imagens/69b39f6dab8b07dc4b1e5039054b9f50.gif" alt="GIF de fundo" id="gif-bg">
 
-            <div class="cabecalho__container-opcoes">
-                <a href="../jogos/numeroSecreto.html" class="cabecalho_opcoes-link">Jogos</a>
-                <a href="https://github.com/Ki3lMigu3l" class="cabecalho_opcoes-link">Repositorio</a>         
-            </div>
+    <header class="cabecalho">
+        <h1 class="cabecalho__titulo">Fokus Study</h1>
+        <nav class="cabecalho__nav">
+            <button class="cabecalho__botao active" data-modo="foco">Foco</button>
+            <button class="cabecalho__botao" data-modo="curto">Descanso Curto</button>
+            <button class="cabecalho__botao" data-modo="longo">Descanso Longo</button>
         </nav>
     </header>
 
-    <video autoplay muted loop id="video-bg">
-        <source src="imagens/lofi-girl-doing-homework-moewalls-com_iFkCLQle.mp4" type="video/mp4">
-    </video>
+    <main class="principal">
+        <div class="temporizador">
+            <span id="tempo">25:00</span>
+            <button id="btn-iniciar-pausar">Começar</button>
+        </div>
 
-    <main>
-        <section class="pomodoro__container">
-            <div class="pomodoro__container-card left">
-                <div class="pomodoro-card-botoes">
-                    <button class="pomodoro-card-button active" data-contexto="foco" id="foco">Pomodoro</button>
-                    <button class="pomodoro-card-button" data-contexto="short" id="curto">Intervalo curto</button>
-                    <button class="pomodoro-card-button" data-contexto="long" id="longo">Intervalo longo</button>
-                </div>
-
-                <div class="temporizador" id="time">25:00</div>
-                <button class="pomodoro-card-button-comecar active" id="btn-time">Começar</button>
-            </div>
-            <div class="pomodoro__container-card right">
-                <div class="tarefas-pomodoro">
-                    <h2 class="pomodoro-left-card-titulo">Adicione uma tarefa</h2>
-
-                </div>
-            </div>
-        </section>
+        <div class="tarefas">
+            <h2>Tarefas</h2>
+            <form id="form-tarefa">
+                <input type="text" id="input-tarefa" placeholder="Adicione uma tarefa" required>
+                <button type="submit">Adicionar</button>
+            </form>
+            <ul id="lista-tarefas"></ul>
+        </div>
     </main>
-    
+
     <script src="pomodoro.js"></script>
 </body>
 </html>
