--- a/src/pages/projects/jogo/numeroSecreto.html
+++ b/src/pages/projects/jogo/numeroSecreto.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/meyer-reset/2.0/reset.min.css" integrity="sha512-NmLkDIU1C/C88wi324HBc+S2kLhi08PN5GDeUVVVC/BVt/9Izdsc9SVeVfA1UZbY3sHUlDSyRXhCzHfr6hmPPw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.2/css/all.min.css" integrity="sha512-z3gLpd7yknf1YoNbCzqRKc4qyor8gaKU1qmn+CShxbuBusANI9QpRohGBreCFkKxLhei6S9CQXFEbbKuqLg0DA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <link rel="stylesheet" href="../styles/pagina-inicial/reset.css">
+    <link rel="stylesheet" href="/src/styles/base/reset.css">
     <link rel="stylesheet" href="numeroSecreto.css">
     <title>Número Secreto</title>
 </head>
@@ -16,12 +16,12 @@
         <nav class="cabecalho__container-nav">
             
             <div class="cabecalho__container-logo">
-                <a href="../index.html" class="cabecalho__logo">Game Study</a><button class="cabecalho__logo-final">Stacker</button>
+                <a href="/index.html" class="cabecalho__logo">Game Study</a><button class="cabecalho__logo-final">Stacker</button>
             </div>
 
             <div class="cabecalho__container-opcoes">
                 <a href="../pomodoro/pomodoro.html" class="cabecalho_opcoes-link active-nav">Pomodoro</a>
-                <a href="https://github.com/Ki3lMigu3l" target="_blank" class="cabecalho_opcoes-link">Repositorio</a> 
+                <a href="https://github.com/Ki3lMigu3l" target="_blank" class="cabecalho_opcoes-link">Repositorio</a>
                       
             </div>
         </nav>
@@ -35,7 +35,6 @@
         <!-- <div>Você disse:</div>
         <span class="box">20</span>
         <div>O número secreto é maior <i class="fa-solid fa-up-long"></i></div> -->
-
     </div>
 
     <script src="SortearNumero.js"></script>
